--- a/guide.html
+++ b/guide.html
@@ -24,12 +24,13 @@
     </header>
 
     <main>
-       <div class="title"></div>
-        <h1>ご利用案内</h1>
-        <ol>
-            <li><a href="index.html">ホーム</a></li>
-            <li>ご利用案内</li>
-        </ol>
+       <div class="title">
+            <h1>ご利用案内</h1>
+            <ol>
+                <li><a href="index.html">ホーム</a></li>
+                <li>ご利用案内</li>
+            </ol>
+        </div>
        <div class="inner">
            <img src="images/guide.jpg" alt="おもちゃで遊ぶ猫ちゃん">
            <div class="about">
